<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天气课程表</string>
    <string name="tip">请输入课程开始时间:</string>
    <string name="next">下一步>></string>
    <string name="addcourse">添课</string>
    <string name="delete">删除本节课</string>
    <string name="oddkeys">单日</string>
    <string name="mon">星期一</string>
    <string name="tue">星期二</string>
    <string name="wen">星期三</string>
    <string name="thr">星期四</string>
    <string name="fir">星期五</string>
    <string name="sar">星期六</string>
    <string name="sun">星期日</string>
    <string name="tofirst">01-02</string>
    <string name="tosecond">03-04</string>
    <string name="tothird">05-06</string>
    <string name="tofour">07-08</string>
    <string name="tofive">09-10</string>
    <string name="city">唐山</string>
    <string name="changecity">切换城市*</string>
    <string name="oneweek">整周</string>
    <string name="button1">一</string>
    <string name="button2">二</string>
    <string name="button3">三</string>
    <string name="button4">四</string>
    <string name="button5">五</string>
    <string name="button6">六</string>
    <string name="button7">日</string>
    
    <string name="createcource">创建课程</string>
   	<string name="ok">确认</string>
   	<string name="cancel">取消</string>
	<string name="courcename">课程名称</string>
	<string name="teacher">老师</string>
	<string name="place">地点</string>
	<string name="courcenum">节数</string>
	<string name="weeknum">周数</string>
	<string name="days">星期</string>
	
	<string name="pleasecourcename">请输入课程名称</string>
	<string name="pleaseteachername">请输入教师姓名</string>
	<string name="pleasecourcenum">请选择上课节数</string>
	<string name="pleaseweeknum">请选择上课周数</string>
	<string name="pleaseplace">请输入上课地点</string>
	<string name="pleasedays">请输入上课星期</string>
	<string name="singleweeks">单周</string>
	<string name="doubleweeks">双周</string>
	<string name="allweeks">全选</string>
	<string name="back">返回</string>
	<string name="edit">编辑</string>
	<string name="textshow">课程名</string>
	<string name="edit_title">编辑课程</string>
	<string name="sure">确定</string>
	<string name="odddays">单日</string>
	<string name="changeFace">皮肤</string>
	<string name="schedule">我的课程表</string>
	
    
</resources>
