<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/blue1"
        >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/createcource"
            />
        <Button 
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="left"
            android:textSize="15sp"
            android:text="@string/ok"
            />
    </LinearLayout>
     <LinearLayout 
         android:id="@+id/toplayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
         android:orientation="vertical"
         >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
         <TextView
             android:id="@+id/textview2"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:text="@string/courcename"
             android:layout_marginTop="5dp"
             android:layout_marginRight="20dp"
             android:textSize="15sp"
             android:focusable="false"
             />
           <EditText
               android:id="@+id/editText1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textSize="15sp"
               android:text="@string/pleasecourcename"
               android:ems="10"
               >
               <requestFocus/>
           </EditText>
         </LinearLayout>
         
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
        	<TextView
            	android:id="@+id/textView3"
            	android:layout_width="75dp"
            	android:layout_height="wrap_content"
            	android:text="@string/teacher"
            	android:layout_marginTop="5dp"
            	android:layout_marginRight="20dp"
            	android:textSize="15sp"
            	android:focusable="false"/>
        	<EditText
            	android:id="@+id/editText2"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:textSize="15sp"
            	android:text="@string/pleaseteachername"
            	android:ems="10">
        	</EditText>
    	</LinearLayout> 
    	
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:id="@+id/buttomlayout"
       	android:layout_marginTop="80dp"
       	android:orientation="vertical">
        <LinearLayout
        	android:layout_width="fill_parent"
       	 	android:layout_height="wrap_content">
        	<TextView
            	android:id="@+id/textView4"
            	android:layout_width="75dp"
            	android:layout_height="wrap_content"
            	android:text="@string/place"
            	android:layout_marginRight="20dp"
            	android:layout_marginTop="5dp"
            	android:textSize="15sp"
            	android:focusable="false"/>
        	<EditText
           	 	android:id="@+id/editText3"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:textSize="15sp"
            	android:text="@string/pleaseplace"
            	android:ems="10" >
        	</EditText>
    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
        	<TextView
            	android:id="@+id/textView5"
            	android:layout_width="75dp"
            	android:layout_height="wrap_content"
            	android:text="@string/courcenum"
            	android:layout_marginRight="20dp"
            	android:layout_marginTop="5dp"
            	android:textSize="15sp"
            	android:focusable="false"/>
        	<EditText
            	android:id="@+id/editText4"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:textSize="15sp"
            	android:text="@string/pleasecourcenum"
            	android:ems="10">
        	</EditText>
    	</LinearLayout>
    	
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/textView6"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/weeknum"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:focusable="false"/>
        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/pleaseweeknum"
            android:ems="10">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/textView7"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:focusable="false"/>
        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/pleasedays"
            android:ems="10">
        </EditText>
    </LinearLayout>   
   </LinearLayout>      
     </LinearLayout>
</LinearLayout>
