<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <LinearLayout 
       android:layout_width="match_parent"
       android:background="@color/blue1"
       android:layout_height="wrap_content"
       >
       <Button 
           android:id="@+id/back"
           android:layout_marginTop="5dp"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:layout_weight="0.15"
           android:text="@string/back"
           />
       <TextView 
           android:id="@+id/edit_title"
           android:layout_marginTop="5dp"
           android:textSize="20sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1.0"
           android:gravity="center"
           android:text="@string/edit_title"
           />
       <Button 
           android:id="@+id/ok"
           android:layout_marginTop="5dp"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:layout_weight="0.15"
           android:text="@string/sure"
           />
   </LinearLayout>
   
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/courcename" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/place" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ems="10" >
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/teacher" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ems="10" >
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/courcenum" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/weeknum" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ems="10" >
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/days" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ems="10" >
        </EditText>

    </LinearLayout>
   
   

</LinearLayout>
