<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"  
    android:background="@color/white"
    android:orientation="vertical">  
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
　　<Button  
        android:id="@+id/one"  
        android:text="1"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>"
　　<Button  
        android:id="@+id/two"  
        android:text="2"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>  
　　<Button  
        android:id="@+id/three"  
        android:text="3"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>   
　　<Button  
        android:id="@+id/four"  
        android:text="4"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>  
　　<Button  
        android:id="@+id/five"  
        android:text="5"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>  
        </TableRow>
         <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
　　<Button  
        android:id="@+id/six"  
        android:text=" 6 "
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:background="@color/white"/>   
　　<Button  
        android:id="@+id/seven"  
        android:text=" 7 "
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>  
　　<Button  
        android:id="@+id/eight"  
        android:text=" 8 "
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>  
　　<Button  
        android:id="@+id/nine"  
        android:text=" 9 "
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>    
    <Button  
        android:id="@+id/ten"   
        android:text="10"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:background="@color/white"/>  
         </TableRow>
         <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
　　<Button  
        android:id="@+id/eleven"  
        android:text="11"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>  
    <Button  
        android:id="@+id/twelve"    
        android:text="12"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>  
    <Button  
        android:id="@+id/thirteen"   
        android:text="13"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>   
    <Button  
        android:id="@+id/fourteen"   
        android:text="14"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>   
    <Button  
        android:id="@+id/fifteen"   
        android:text="15"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/> 
        </TableRow>
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
    <Button  
        android:id="@+id/sixteen"   
        android:text="16"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>   
    <Button  
        android:id="@+id/seventeen"   
        android:text="17"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>   
    <Button  
        android:id="@+id/eighteen"   
        android:text="18"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>   
    <Button  
        android:id="@+id/nineteen"   
        android:text="19"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>   
    <Button  
        android:id="@+id/twenty"   
        android:text="20"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/white"/>   
        </TableRow>
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            >
        <Button 
            android:id="@+id/danzhou"
            android:text="@string/singleweeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        <Button
            android:id="@+id/shuangzhou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/doubleweeks" />
        
        <Button 
            android:id="@+id/quanxuan"
            android:text="@string/allweeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        </TableRow>
  </LinearLayout>  